--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 50px 0;
 }
 
 .canvas {
@@ -17,10 +18,45 @@ body {
   padding-top: 50px;
 }
 
-.controls__colors {
-  margin-top: 20px;
+.controls{
+  margin-top: 50px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
+}
+
+.controls__range{
+  margin-bottom: 20px;
+}
+
+.controls__btns{
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.controls__btns>button{
+  all:unset;
+  cursor: pointer;
+  background-color: white;
+  padding: 5px 0px;
+  width: 80px;
+  text-align: center;
+  margin: 0 10px;
+  border-radius: 10px;
+  border: 2px solid rgba(0,0,0,0.2);
+  color: rgba(0,0,0,0.8);
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 18px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+.controls__btns>button:active{
+  transform: scale(0.95);
+}
+
+.controls__colors {
+  display: flex;
 }
 
 .controls__color {
