--- a/style.css
+++ b/style.css
@@ -67,3 +67,7 @@ body {
   cursor: pointer;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
+
+.controls__color:active{
+  transform: scale(0.95);
+}
